# stim_behavior

./: .gitignore  README.md  _extract_dlc_online.ipynb  environment.yml  extract_dlc.ipynb  extract_dlc_online.ipynb  extract_prosvd.ipynb  helpers.py  load_inference.py  pyproject.toml  reqs.yaml  restruct_data.py  train_network.ipynb  useful_codes.ipynb  utils.py  zebrafish_analysis.ipynb
configs/: download_data.yaml  download_data_2.yaml  latency.yaml  main.yaml  octo-1.yaml  octo-17.yaml  octo-2-large.yaml  octo-2-unlabelled-small.yaml  octo-2.yaml  octo.yaml  octo_mech.yaml  octopus.yaml  tshrew_params.override.yaml  tshrew_params.yaml  tshrew_paths_user.yaml  zebrafish.yaml
models/: mice_data_loader.py
notebooks/: 3dDLC.py  DLC_Clean.ipynb  NapierFatigueData.npy  angleTrackTest.ipynb  deeplab_test.ipynb  deeplabcut_latency_analysis.ipynb  deeplabcut_train.ipynb  dlcValidationFigures.ipynb  dlc_angles.ipynb  dlc_refine.ipynb  dmpFatigueFigure.ipynb  download_data.ipynb  extract_dlc.ipynb  fatigueFigure.py  gp-bo.ipynb  latency_analysis_dlc.ipynb  mice_load_data.ipynb  mice_prosvd.ipynb  newFatigueFig.ipynb  octopus_prosvd.ipynb  preprocess_data_mice.ipynb  preprocess_data_mice_2photon.ipynb  process_prosvd.ipynb  prosvd_analyse copy.ipynb  prosvd_analyse.ipynb  prosvd_compute_mice.ipynb  prosvd_compute_mice_cam_combined.ipynb  sigmoid.ipynb  sleap_test.ipynb  stim_array.npy
scripts/: DLCAngle.py  GP-BO.py  benchmark.py  camera.py  cameraCtrl.py  camera_check.py  convert_pelled_xls_to_json.ipynb  dataLoader.py  data_search.py  datasets.py  dlc_latency_analysis.py  (+8 more)
(+47 files in other folders)
